Command uses apache exec