@@ -4,7 +4,7 @@ import annotation.tailrec
 import maker.utils.FileUtils._
 import java.io.PrintWriter
 import maker.utils.{TeeToFileOutputStream, Stopwatch}
-import maker.utils.os.{CommandOutputHandler, ScalaCommand}
+import maker.utils.os.Command
 import maker.task._
 import maker.task.compile.{TestCompileTask, Run}
 import maker.project.BaseProject
@@ -38,42 +38,22 @@ case class RunMainTask(baseProject : BaseProject, className : String, opts : Lis
 
     val optsToUse = config.debugFlags ::: List(
       s"-Xmx${config.unitTestHeapSize}m", 
-      "-XX:MaxPermSize=200m",
       "-Dlogback.configurationFile=" + "logback.xml"
     ) ::: opts
-    val cmd = ScalaCommand(
-      new CommandOutputHandler(Some(writer)),
-      config.javaExecutable.getAbsolutePath,
-      optsToUse,
-      baseProject.testClasspath,
-      className,
-      "Running main in " + baseProject.name,
-      mainArgs 
+    var cmd = Command.scalaCommand(
+      classpath = baseProject.testClasspath,
+      klass = className,
+      opts = optsToUse,
+      args = mainArgs
     )
-
-    writeToFile(file(baseProject.rootAbsoluteFile, "runcmd.sh"), "#!/bin/bash\n" + cmd.asString)
-    logger.info("Running, press ctrl-] to terminate running process...")
-
-    val procHandle = cmd.execAsync()
-    @tailrec
-    def checkRunning(): TaskResult = {
-      if (!procHandle._2.isCompleted) {
-        Thread.sleep(1000)
-        if (System.in.available > 0 && System.in.read == Task.termChar) {
-          logger.info("Terminating: " + className)
-          procHandle._1.destroy()
-          logger.info("Terminated process for runMain of class : " + className)
-          DefaultTaskResult(this, true, sw)
-        }
-        else checkRunning()
-      }
-      else {
-        Await.result(procHandle._2, Duration.Zero) match {
-          case 0 => DefaultTaskResult(this, true, sw)
-          case code => DefaultTaskResult(this, false, sw, message = Some("Run Main failed in " + baseProject))
-        }
-      }
+    if (baseProject.isTestProject)
+      cmd = cmd.withNoOutput
+    else
+      cmd = cmd.withOutputTo(new TeeToFileOutputStream(runLogFile))
+    cmd = cmd.withOutputTo(new TeeToFileOutputStream(runLogFile))
+    cmd.run match {
+      case 0 => DefaultTaskResult(this, true, sw)
+      case code => DefaultTaskResult(this, false, sw, message = Some("Run Main failed in " + baseProject))
     }
-    checkRunning()
   }
 }
